# bs_lab_vue

./: .gitignore  MOBILE_WORKFLOW.md  README.md  deploy-mobile.bat  docker-compose.yml  package.json  start-dev.bat  start-prod.bat
agents_service/: .deps_installed  .env.example  ARCHITECTURE.md  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  repository.py  requirements.txt  schemas.py
agents_service/agents_framework/: __init__.py  base_agent.py  checkpointer.py  context_cache.py  db_url.py  errors.py  mysql_checkpointer.py  output_engine.py  router.py  server.py  sse.py  tool_registry.py
agents_service/bs_lab_adapter/: __init__.py  safety.py
agents_service/bs_lab_adapter/graphs/: __init__.py  free_chat_graph.py  plan_design_graph.py  post_experiment_graph.py  student_graph.py
agents_service/bs_lab_adapter/prompts/: parent.yaml  researcher.yaml  student.yaml  teacher.yaml
agents_service/bs_lab_adapter/schemas/: __init__.py  plan_design.py  vision.py
agents_service/bs_lab_adapter/tools/: __init__.py  curriculum.py  diagnosis_report_formatter.py  experiment_db.py  report.py  vision_review.py
agents_service/bs_lab_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents_service/scripts/: init_db.sql
backend/: .dockerignore  .env.example  Dockerfile  pom.xml
docs/: README.md  ai四模块开发计划.md  mobile-data-source-audit.md  mobile-dev-plan.md  mobile-no-mock-analysis.md  mobile-no-mock-execution-plan.md  mobile-product-spec.md  mobile-sql-decision.md  mobile-test-data-playbook.md  (+2 more)
(+901 files in other folders)
