[project]
name = "bs-lab-agents"
version = "1.0.0"
description = "LangGraph Agent Platform for bs-lab"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# postgres 依赖已废弃，checkpointer 改用 MySQLSaver（复用 aiomysql）
# 如需保留旧配置，取消注释：
# postgres = ["psycopg[binary]>=3.2.0"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents_framework*", "bs_lab_adapter*"]
